# flexschema

./: .gitignore  README.md  pyproject.toml
flexschema/cli/: bin.py
flexschema/schema/: schema.py
flexschema/translate/: translation.py
flexschema/translate/mongoengine/: translate.py
flexschema/translate/typescript/: translate.py
test/: test_mongoengine.py  test_nested.py  test_typescript.py  utils.py
test/samples/: many.json  nested.json
